# share

./: README.md  tflite_model_int8_quant.tflite
redisMQ/: Makefile  README.md  compile.sh  main  testsink  testvent
redisMQ/conf/: redis_mq.conf  redis_mq_two_PCs.conf
redisMQ/include/: data_switch.h  itwconfig.h  redis_adapter.h  taskwork.h  zhelpers.hpp
redisMQ/libevent-2.1.12-stable/: Makefile  config.status  libevent.la  libevent.pc  libevent_core.la  libevent_core.pc  libevent_extra.pc  libevent_openssl.pc  libevent_pthreads.la  libevent_pthreads.pc  libtool
redisMQ/libs/: libhiredis.so.1.1.0
redisMQ/sc-common/: Makefile
redisMQ/src/: data_switch.cpp  itwconfig.cpp  main.cpp  redis_adapter.cpp  taskwork.cpp
redisMQ/test/: testsink.cpp  testvent.cpp
test/: .gitignore  note.txt
test/alsa/: param  param.c  playWav  playWav.c  playWav_test  playWav_test.c  showPcmInfo  showPcmInfo.c
test/cJson/: cjson_test.c  make_json.cpp  str_to_cjson - 副本.c  str_to_cjson.c  test_for_4_inch_cjson.c  test_for_4_inch_cjson_1.c
test/cpp/: auto.cpp  auto_ptr.c  condition_variable.cpp  construct.cpp  copy.cpp  copy_construct.cpp  lambda.cpp  move.c  note.txt  right_reference.cpp  share_mutex.cpp  thread_local_storage.cpp  virtual_inherit.cpp
test/data_structure/: 2array.c  container_of.c  list.h  list_linux_kernal.c  offsetof.c  strToLowerCase.c  string_length.c
test/file_net/: inet_ntoa.c
test/file_path_cp/: chmod_chown  chmod_chown.c  cp_path_file  cp_path_file.c  dup.c  dup2.c  (+16 more)
test/player/player_drm/demo_linux_compile_OK_0913/: CMakeLists.txt  dec_drm.c
(+354 files in other folders)
